--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.esupportail.cas</groupId>
   <artifactId>cas-server-support-agimus-cookie</artifactId>
-  <version>6.4.0-RC4</version>
+  <version>6.4.4</version>
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -67,7 +67,7 @@
     
     <properties>
         <springboot.version>1.5.8.RELEASE</springboot.version>
-        <cas.version>6.4.0-RC4</cas.version>        
+        <cas.version>6.4.4</cas.version>        
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
